force-app/main/default/objects/EIM_Map__c/EIM_Map__c.object-meta.xml
<CustomObject>
    <label>EIM Map</label>
    <nameField>
        <displayFormat>Map-{00000}</displayFormat>
        <label>EIM Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EIM Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>