force-app/main/default/objects/EIM_Map__c/fields/Field_Order__c.field-meta.xml
<CustomField>
    <fullName>Field_Order__c</fullName>
    <label>Field Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>