force-app/main/default/objects/EIM_Map__c/fields/isBooleanTransform__c.field-meta.xml
<CustomField>
    <fullName>isBooleanTransform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBooleanTransform</label>
    <type>Checkbox</type>
</CustomField>