force-app/main/default/objects/EIM_Map__c/fields/Node__c.field-meta.xml
<CustomField>
    <fullName>Node__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Node</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>