force-app/main/default/objects/EIM_Map__c/fields/ParentNode__c.field-meta.xml
<CustomField>
    <fullName>ParentNode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ParentNode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>