force-app/main/default/objects/EIM_Map__c/fields/SF_Field__c.field-meta.xml
<CustomField>
    <fullName>SF_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SF Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>