force-app/main/default/objects/EIM_Map__c/listViews/CMP_MEMBER_CXM.listView-meta.xml
<ListView>
    <fullName>CMP_MEMBER_CXM</fullName>
    <columns>NAME</columns>
    <columns>Field_Type__c</columns>
    <columns>SF_Field__c</columns>
    <columns>External_Field__c</columns>
    <columns>Field_Order__c</columns>
    <columns>IsActive__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Type__c</field>
        <operation>equals</operation>
        <value>CMP_MEMBER_CXM</value>
    </filters>
    <label>CMP_MEMBER_CXM</label>
    <language>en_US</language>
</ListView>