force-app/main/default/objects/EIM_Map__c/listViews/NBO_PRODUCT_CXM.listView-meta.xml
<ListView>
    <fullName>NBO_PRODUCT_CXM</fullName>
    <columns>NAME</columns>
    <columns>Field_Type__c</columns>
    <columns>SF_Field__c</columns>
    <columns>External_Field__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Field_Order__c</columns>
    <columns>IsActive__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Type__c</field>
        <operation>equals</operation>
        <value>NBO_PRODUCT_CXM</value>
    </filters>
    <label>NBO_PRODUCT_CXM</label>
    <language>en_US</language>
</ListView>